; ModuleID = '/home/carl/AnghaBench/vlc/modules/packetizer/extr_dts_header.c_dts_header_ParseSubstream.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/packetizer/extr_dts_header.c_dts_header_ParseSubstream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8*, i32 }

@VLC_DTS_HEADER_SIZE = common dso_local global i32 0, align 4
@DTS_SYNC_SUBSTREAM = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i8*)* @dts_header_ParseSubstream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dts_header_ParseSubstream(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @VLC_DTS_HEADER_SIZE, align 4
  %11 = call i32 @bs_init(i32* %5, i8* %9, i32 %10)
  %12 = call i32 @bs_skip(i32* %5, i32 42)
  %13 = call i64 @bs_read1(i32* %5)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %2
  %17 = call i8* @bs_read(i32* %5, i32 8)
  store i8* %17, i8** %8, align 8
  %18 = call i8* @bs_read(i32* %5, i32 16)
  store i8* %18, i8** %7, align 8
  br label %22

19:                                               ; preds = %2
  %20 = call i8* @bs_read(i32* %5, i32 12)
  store i8* %20, i8** %8, align 8
  %21 = call i8* @bs_read(i32* %5, i32 20)
  store i8* %21, i8** %7, align 8
  br label %22

22:                                               ; preds = %19, %16
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %24 = call i32 @memset(%struct.TYPE_4__* %23, i32 0, i32 24)
  %25 = load i32, i32* @DTS_SYNC_SUBSTREAM, align 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 2
  store i32 %25, i32* %27, align 8
  %28 = load i8*, i8** %8, align 8
  %29 = getelementptr i8, i8* %28, i64 1
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  store i8* %29, i8** %31, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = getelementptr i8, i8* %32, i64 1
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  store i8* %33, i8** %35, align 8
  %36 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %36
}

declare dso_local i32 @bs_init(i32*, i8*, i32) #1

declare dso_local i32 @bs_skip(i32*, i32) #1

declare dso_local i64 @bs_read1(i32*) #1

declare dso_local i8* @bs_read(i32*, i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
